# FinRAG-AI

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/sample_filings/: README.md
data_ingestion/: reports_parser.py  sec_downloader.py
embeddings/: embedder.py
evaluation/: experiments.py  golden_qa.json  rag_evaluator.py
retrieval/: hybrid_retriever.py  langchain_pipeline.py  rag_pipeline.py  reranker.py
sentiment/: sentiment_analyzer.py
tests/: conftest.py
ui/: streamlit_app.py
